# MayaShapeSample

./: .gitignore  CMakeLists.txt  README.md  pluginCmd.cpp  pluginCmd.h  pluginMain.cpp  simpleShapeIterator.h  simpleShapeUI.cpp
SAMPLE/: CMakeLists.txt
SAMPLE/src/: simpleShapeIterator.cpp  simpleShapeUI.cpp
include/: simpleShape.h  simpleShapeUI.h
